--- a/pages/example.html
+++ b/pages/example.html
@@ -8,7 +8,6 @@
     <title>JWA</title>
     <!-- Bootstrap -->
     <link href="/Content/bootstrap.min.css" rel="stylesheet">
-    <link href="/style/carousel.css" rel="stylesheet">
     <link href="../style/home.css" rel="stylesheet" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,19 +17,51 @@
     <![endif]-->
 </head>
 <body>
+    <div id="myCarousel" class="carousel slide col-xs-12" style="height: auto;">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Carousel items -->
+        <div class="carousel-inner" style="height: auto;">
+            <div class="item active">
+                <img src="/images/commercial/marquee-747.jpg" alt="First slide" style="height: auto;">
+                <div class="car-caption" style="padding: 0 10px;">
+                    <h1>Whales</h1>
+                    <p>Everybody loves gooch touching. Why don't you touch your own all the time? Hit the ground floor!</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="/images/commercial/marquee-787.jpg" alt="Second slide" style="height: 100%;">
+            </div>
+            <div class="item">
+                <img src="/images/commercial/marquee-767.jpg" alt="Third slide" style="height: 100%;">
+            </div>
+        </div>
+        <!-- Carousel nav -->
+        <a class="carousel-control left" style="top: 0; bottom: 0; font-size: 20pt; padding: 25% 0;" href="#myCarousel" data-slide="prev">
+            <div style="vertical-align: middle;">&lsaquo;</div>
+        </a>
+        <a class="carousel-control right" style="top: 0; bottom: 0; font-size: 20pt; padding: 25% 0;" href="#myCarousel" data-slide="next">
+            <div style="top: 45%; bottom: 45%;">&rsaquo;</div>
+        </a>
+    </div>
 
     <div class="container" style="padding: 40px;">
         <div class="row visible-on">
 
             <div class="col-xs-6 col-sm-3" style="background-color: #dedef8;
-         box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+                                                                                                      box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
 
                 <span class="hidden-xs">Extra small</span>
                 <span class="visible-xs">✔ Visible on x-small</span>
             </div>
 
             <div class="col-xs-6 col-sm-3" style="background-color: #dedef8;
-         box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+                                                                                                              box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
 
                 <span class="hidden-sm">Small</span>
                 <span class="visible-sm">✔ Visible on small</span>
@@ -39,14 +70,14 @@
             <div class="clearfix visible-xs"></div>
 
             <div class="col-xs-6 col-sm-3" style="background-color: #dedef8;
-         box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+                                                                                                              box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
 
                 <span class="hidden-md">Medium</span>
                 <span class="visible-md">✔ Visible on medium</span>
             </div>
 
             <div class="col-xs-6 col-sm-3" style="background-color: #dedef8;
-         box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+                                                                                                              box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
 
                 <span class="hidden-lg">Large</span>
                 <span class="visible-lg">✔ Visible on large</span>
@@ -93,7 +124,7 @@
         <div class="col-lg-6" style="background-color: red; height: 200px"></div>
     </div>
 
-
+    <a href="~/controls/footer.ascx">~/controls/footer.ascx</a>
     <!--Script References-->
     <script src="/Scripts/jquery-3.1.0.min.js"></script>
     <script src="/Scripts/bootstrap.min.js"></script>
