--- a/pages/example.html
+++ b/pages/example.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>JWA</title>
+    <link rel="shortcut icon" href="/images/logos/JWAlogo2.ico" type="image/x-icon" />
     <!-- Bootstrap -->
     <link href="/Content/bootstrap.min.css" rel="stylesheet">
     <link href="../style/home.css" rel="stylesheet" />
